--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <!------------------------------- sec3 ---------------------------- -->
     <div class="sec3">
         <div class="sec3-left" data-aos="fade-up">
-            <h1>Having 7+ Years of Experience in Legal Service</h1>
+            <h1>Having 10+ Years of Experience in Legal Service</h1>
             <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                 ex ea commodo consequat.</p> -->
@@ -391,7 +391,7 @@
                 </div>
             </div>
             <div class="down">
-                © 2021 LITEAGLE. All Rights Reserved.
+                © 2021 LITEAGLE LLP. All Rights Reserved.
             </div>
         </footer>
 
