--- a/our-services.html
+++ b/our-services.html
@@ -299,7 +299,7 @@
             </div>
         </div>
         <div class="down">
-            © 2021 LITEAGLE. All Rights Reserved.
+            © 2021 LITEAGLE LLP. All Rights Reserved.
         </div>
     </footer>
 
