--- a/contact-us.html
+++ b/contact-us.html
@@ -147,7 +147,7 @@
             </div>
         </div>
         <div class="down">
-            © 2021 LITEAGLE. All Rights Reserved.
+            © 2021 LITEAGLE LLP. All Rights Reserved.
         </div>
     </footer>
 
