--- a/our-team.html
+++ b/our-team.html
@@ -225,7 +225,7 @@
             </div>
         </div>
         <div class="down">
-            © 2021 LITEAGLE. All Rights Reserved.
+            © 2021 LITEAGLE LLP. All Rights Reserved.
         </div>
     </footer>
 
